Finalizado header + inicio do body

--- a/css/geral.css
+++ b/css/geral.css
@@ -1,61 +1,73 @@
 @import url("./variaveis.css");
 
-:root {
-    font-family: "Open Sans", sans-serif;
-}
-
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 /* HEADER: */
 #header {
-    width: 100%;
-    background-color: var(--sec);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding-inline: 3rem;
-    border-top: 3px solid var(--main);
-    border-bottom: 5px solid var(--main);
+  width: 100%;
+  background-color: var(--sec);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-inline: 3rem;
+  border-top: 3px solid var(--main);
+  border-bottom: 5px solid var(--main);
 }
 
-#header>img {
-    max-width: 10%;
-    margin-top: 1.5rem;
+#box {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#box > h1 {
+  align-self: center;
+  padding: 10px;
+  color: var(--main);
+  font-weight: bold;
+  font-family: "Open Sans", sans-serif;
+}
+
+#box > img {
+  max-width: 10%;
+  margin-top: 1.5rem;
 }
 
 #abas {
-    height: min-content;
-    display: flex;
-    justify-content: space-around;
+  height: min-content;
+  display: flex;
+  justify-content: space-around;
 }
 
-#abas>a {
-    height: fit-content;
-    margin-left: 1rem;
-    margin-right: 1rem;
-    border-radius: 0 0 5px 5px;
-    padding: 1rem;
-    background-color: var(--main);
-    color: white;
-    display: flex;
+#abas > a {
+  height: fit-content;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  border-radius: 0 0 5px 5px;
+  padding: 1rem;
+  background-color: var(--main);
+  color: white;
+  display: flex;
 }
 
-#abas>img {
-    max-width: 10%;
+#abas > img {
+  max-width: 10%;
 }
 
 nav {
-    width: 100%;
-    height: max-content;
-    display: flex;
-    justify-content: space-evenly;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+  width: 100%;
+  height: max-content;
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-nav>a {
+nav > a {
   padding: 1rem;
   text-align: center;
   position: relative;
@@ -63,47 +75,59 @@ nav>a {
   border: 2px solid transparent;
 }
 
-nav>a::before, nav>a::after {
-    display: block;
-    content: "";
-    width: 20px;
-    height: 20px;
-    position: absolute;
+nav > a::before,
+nav > a::after {
+  display: block;
+  content: "";
+  width: 20px;
+  height: 20px;
+  position: absolute;
 }
 
-nav>a::before {
-    top: -4px;
-    left: -4px;
-    border-top: 3px solid var(--main);
-    border-left: 3px solid var(--main);
-    transition: 0.5s all;
+nav > a::before {
+  top: -4px;
+  left: -4px;
+  border-top: 3px solid var(--main);
+  border-left: 3px solid var(--main);
+  transition: 0.5s all;
 }
 
-nav>a::after {
-    bottom: -4px;
-    right: -4px;
-    border-bottom: 3px solid var(--main);
-    border-right: 3px solid var(--main);
-    transition: 0.5s all;
+nav > a::after {
+  bottom: -4px;
+  right: -4px;
+  border-bottom: 3px solid var(--main);
+  border-right: 3px solid var(--main);
+  transition: 0.5s all;
 }
 
-nav>a:hover::before, nav>a:hover::after {
-    width: 102%;
-    height: 111%;
+nav > a:hover::before,
+nav > a:hover::after {
+  width: 102%;
+  height: 111%;
 }
- /* FIM DO HEADER */
+/* FIM DO HEADER */
 
 /* COMEÇO DO WRAPPER */
 #wrapper {
-    width: 100%;
-    padding: 2rem;
+  width: 100%;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} 
+
+#inicio {
+  width: fit-content;
+  padding: 5px;
+  font-family: "Open Sans", sans-serif;
+  margin: 10px;
+  border: 2px solid var(--main);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--main);
 }
-
-
-
-
-
-
 /* Linha de centralização */
 /* hr {
     background-color: red;
